--- a/src/App.css
+++ b/src/App.css
@@ -222,7 +222,48 @@
   border-radius: 20px;
   border: none;
 }
+/* =============Skill--section========= */
 
+
+.parent{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+.parent .card{
+  width: 150px;
+  height: 150px;
+  z-index: 10;
+}
+
+.parent .card::before{
+  content: attr(data-card);;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -10px;
+  left: -10px;
+  background-color: rgb(87, 74, 74);
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: borderAnimation 4s infinite;
+  border: 2px solid;
+}
+
+@keyframes borderAnimation {
+  0% {
+    border-color: #88ce19;
+  }
+  100% {
+    border-color: #397fe986;
+  }
+}
 
 /* =============Phone========= */
 
@@ -257,6 +298,11 @@
   }
   .mobile-bttn{
     display: block;
+  }
+  .parent{
+    justify-content: center;
+    gap: 40px;
+    flex-wrap: wrap;
   }
   
 }
